--- a/templates/pvc.yaml
+++ b/templates/pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Chart.Name }}-pvclaim
+  name: {{ .Chart.Name }}-pv-claim
 spec:
   accessModes:
     - ReadWriteOnce
   volumeMode: Filesystem
   resources:
     requests:
-      storage: {{ .Values.volumes.data.size}}
+      storage: {{ .Values.volumes.data.size }}
